<resources>
    <string name="app_name">SimplePay</string>
    <string name="title_activity_wallet_overview2" translatable="false">SimplePay</string>
    <string name="wallet_creation_name">Name:</string>
    <string name="pin" translatable="false">PIN:</string>
    <string name="wallet_creation_keysize" translatable="false">Keysize:</string>
    <string name="selectDevice">Select a Device:</string>
    <string name="selectWallet">Select a Wallet:</string>
    <string name="confirm">Confirm</string>
    <string name="amount">Amount: </string>
    <string name="purpose">Purpose:</string>
    <string name="cancel">Cancel</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="delete_wallet_Text">Are you sure you want to delete the Wallet %s</string>
    <string name="wrongPassword">Wrong PIN</string>
    <string name="sender">Sender:</string>
    <string name="receiver">Receiver:</string>
    <string name="time">Time:</string>
    <string name="transactionInfo">Transaction Info</string>
    <string name="createTransaction">Create Transaction</string>
    <string name="walletID">Wallet ID:</string>
    <string name="createWallet">Create Wallet</string>
    <string name="tosGreeting">By using this app you agree with our terms of service</string>
    <string name="showTos">Show terms of service</string>
    <string name="about">About</string>
    <string name="optional"> (Optional) </string>
    <string name="send_money">Send Money</string>
    <string name="unnamed_wallet">Unnamed Wallet</string>
    <string name="scan_qr">Scan QR-Code</string>
    <string name="walletChange">Change Wallet</string>
    <string name="SelectQRType">Select QR Code Type</string>
    <string name="action_createQR">Create QR-Code</string>
    <string name="createDeviceQR">Create Device QR Code</string>
    <string name="createWalletQR">Create Wallet QR Code</string>
    <string name="createTransactionQR">Create Transaction QR Code</string>
    <string name="createTransactionQRTitle">Create Transaction QR Code</string>
    <string name="errorOccurred">An Error Occurred. Plase show SimplePay this message so we can help</string>
    <string name="editWallet">INFO</string>
    <string name="aboutText" translatable="false">Made by TDMzdA== alias Markus Toran, Roman Amblank, Aaron Alef und Benjamin Borrell</string>
    <string name="exitingApp">Exiting app due to finished Transaction</string>
    <string name="action_settings">Settings</string>

    <string name="pref_read_agb">Read AGB?</string>
    <string name="pref_read_agb_summ">Did you read the AGB?</string>
    <string name="pref_general">General Settings</string>
    <string name="pref_username_summ">Set a name how you will be seen by others</string>
    <string name="pref_username">Username</string>
    <string name="lightTheme">Light Theme</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="pref_app">App Setting</string>
    <string name="pref_debug_summ">Enable debug mode</string>
    <string name="pref_debug">Debug</string>
    <string name="pref_theme_dialog_title">Set Theme</string>
    <string name="pref_theme">Theme</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="settings">Settings</string>
</resources>
