<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_general"
        android:title="@string/pref_general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_read_agb"
            android:summary="@string/pref_read_agb_summ"
            android:title="@string/pref_read_agb" />
        <EditTextPreference
            android:defaultValue="THIS USER HAS NO NAME"
            android:key="pref_username"
            android:summary="@string/pref_username_summ"
            android:title="@string/pref_username" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_app"
        android:title="@string/pref_app">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_debug"
            android:summary="@string/pref_debug_summ"
            android:title="@string/pref_debug" />
        <ListPreference
            android:defaultValue="light"
            android:dialogTitle="@string/pref_theme_dialog_title"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_entries_values"
            android:key="pref_theme"
            android:title="@string/pref_theme" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_usability"
        android:title="@string/pref_usability">
        <ListPreference
            android:defaultValue=""
            android:key="pref_default_wallet"
            android:summary="@string/pref_default_wallet_summ"
            android:title="@string/pref_default_wallet" />
    </PreferenceCategory>
</PreferenceScreen>