<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pepepay.pepepaynative.fragments.TransactionFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:contextClickable="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/amountText"
                android:layout_column="0"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/amountSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/purpose"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/purposeSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pinText"
                android:layout_column="0"
                android:text="@string/pin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/pinSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/confirmButton"
                android:layout_column="1"
                android:text="@string/confirm" />
        </TableRow>
    </TableLayout>
</FrameLayout>
