<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pepepay.pepepaynative.fragments.WalletCreateFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_column="0"
                android:text="@string/wallet_creation_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/nameSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_column="0"
                android:text="@string/pin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/pinSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_column="0"
                android:text="@string/wallet_creation_keysize"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/keySizeSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:text="@string/confirm" />
        </TableRow>
    </TableLayout>

</FrameLayout>
