<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="pepepay.pepepaynative.fragments.TransactionInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:shrinkColumns="0"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:paddingRight="8dp"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:paddingRight="8dp"
                android:text="@string/sender"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:paddingRight="8dp"
                android:text="@string/receiver"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:paddingRight="8dp"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/purpose"
                android:layout_column="0"
                android:layout_span="2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="italic" />
        </TableRow>

    </TableLayout>
</FrameLayout>
