<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="pepepay.pepepaynative.fragments.WalletChangeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:measureWithLargestChild="false"
        android:shrinkColumns="0"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:weightSum="0">

            <TextView
                android:layout_column="0"
                android:width="99dp"
                android:text="@string/wallet_creation_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/nameSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:width="0dp"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:text="@string/walletID"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/walletID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/deleteWalletButton"
                android:layout_column="0"
                android:layout_span="2"
                android:text="@string/delete_wallet"
                android:textColor="@android:color/holo_red_dark" />
        </TableRow>

        <RelativeLayout
            android:id="@+id/qrLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/qrView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </TableLayout>

</FrameLayout>
